website/versioned_docs/version-0.5.0/user-guide/operator/authz.md
---
title: Operator Authorization
description: Policy surfaces for controller, backup, restore, and upgrade work, with destructive capabilities scoped to the right identities.
slug: /get-started/operator-authorization
hide_title: true
pageType: concept
journey: get-started
---

<PageHeader
  title="Operator authorization surfaces"
  lede="Use separate policy surfaces for controller, backup, restore, and upgrade work. Each path authenticates separately and receives only the capabilities it needs."
/>



<DiagramFrame
  title="Policies stay attached to job-specific identities"
  caption="Each operator path maps to its own JWT role and policy set, with separate controller, backup, restore, and upgrade identities."
  code={`graph LR
    subgraph K8s["Kubernetes identities"]
      Controller["Controller SA"]
      Backup["Backup Job SA"]
      Restore["Restore Job SA"]
      Upgrade["Upgrade Job SA"]
    end

    subgraph Bao["OpenBao auth and policy"]
      RoleController["Role: openbao-operator"]
      RoleBackup["Role: openbao-operator-backup"]
      RoleRestore["Role: openbao-operator-restore"]
      RoleUpgrade["Role: openbao-operator-upgrade"]

      PolicyController["Policy: controller maintenance"]
      PolicyBackup["Policy: snapshot read"]
      PolicyRestore["Policy: snapshot-force"]
      PolicyUpgrade["Policy: rolling or blue-green upgrade"]
    end

    Controller --> RoleController --> PolicyController
    Backup --> RoleBackup --> PolicyBackup
    Restore --> RoleRestore --> PolicyRestore
    Upgrade --> RoleUpgrade --> PolicyUpgrade

    classDef read fill:transparent,stroke:#79c0ab,stroke-width:2px,color:#e6f4ef;
    classDef write fill:transparent,stroke:#87d6be,stroke-width:2px,color:#e6f4ef;
    classDef caution fill:transparent,stroke:#fdd0a4,stroke-width:2px,color:#e6f4ef;

    class Controller,Backup,Restore,Upgrade read;
    class RoleController,RoleBackup,RoleRestore,RoleUpgrade write;
    class PolicyController,PolicyBackup,PolicyUpgrade write;
    class PolicyRestore caution;`}
/>

<DecisionTable
  title="Policy surfaces by lifecycle capability"
  columns={['Policy surface', 'Used by', 'Typical capabilities', 'Why it stays separate']}
  rows={[
    {
      cells: [
        'Controller maintenance',
        'The main controller Deployment',
        '`sys/health`, `sys/step-down`, and autopilot configuration reads or updates',
        'Keep this path available for routine reconciliation and maintenance without adding destructive restore powers.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Backup',
        'The generated backup Job',
        '`sys/storage/raft/snapshot` read access',
        'Snapshot reads are narrower than controller maintenance and remain easier to reason about independently.',
      ],
    },
    {
      cells: [
        'Restore',
        'The generated restore Job',
        '`sys/storage/raft/snapshot-force` update access',
        'Restore can replace the full cluster state and belongs only on the workload that performs restore.',
      ],
      emphasis: 'caution',
    },
    {
      cells: [
        'Upgrade',
        'The generated upgrade Job',
        'Step-down, autopilot state, snapshot read, and optional peer-management operations for blue-green flows',
        'Upgrade paths often need time-bounded orchestration permissions without widening steady-state controller access.',
      ],
    },
  ]}
/>

<Callout type="danger" title="Restore is a destructive role">

The restore capability can replace data, policies, and keys across the cluster.
Do not bind the restore policy to the controller or to a broad multi-purpose ServiceAccount just because it is convenient during setup.

</Callout>

## Default policy surfaces

<Tabs groupId="operator-policy-surfaces">

<TabItem value="controller" label="Controller">

<CommandBlock
  language="hcl"
  label="configure"
  title="Controller maintenance policy"
  code={`path "sys/health" {
  capabilities = ["read"]
}

path "sys/step-down" {
  capabilities = ["sudo", "update"]
}

path "sys/storage/raft/configuration" {
  capabilities = ["read"]
}

path "sys/storage/raft/remove-peer" {
  capabilities = ["update"]
}

path "sys/storage/raft/autopilot/configuration" {
  capabilities = ["read", "update"]
}

path "sys/storage/raft/autopilot/state" {
  capabilities = ["read"]
}`}
>
  This is the steady-state controller scope. Keep backup, restore, and blue-green peer management in separate roles unless you are intentionally changing the model.
</CommandBlock>

<Callout type="warning" title="Existing clusters must update the controller policy manually">

The operator does not rewrite OpenBao policies after bootstrap. If an operator upgrade adds a new
controller-side capability, such as `read` on `sys/storage/raft/autopilot/state`, update the
`openbao-operator` policy manually on existing clusters. Until that policy includes the new path,
features that depend on it will report `Unknown` rather than a concrete health state.

</Callout>

</TabItem>

<TabItem value="backup" label="Backup">

<CommandBlock
  language="hcl"
  label="configure"
  title="Backup policy"
  code={`path "sys/storage/raft/snapshot" {
  capabilities = ["read"]
}`}
>
  Backup only needs snapshot streaming. Storage-provider credentials are a separate boundary outside this OpenBao policy.
</CommandBlock>

</TabItem>

<TabItem value="restore" label="Restore">

<CommandBlock
  language="hcl"
  label="configure"
  title="Restore policy"
  code={`path "sys/storage/raft/snapshot-force" {
  capabilities = ["update"]
}`}
>
  Keep this policy tightly bound to the generated restore Job identity and only for the period where restore is actually needed.
</CommandBlock>

</TabItem>

<TabItem value="upgrade" label="Upgrade">

<CommandBlock
  language="hcl"
  label="configure"
  title="Rolling and blue-green upgrade policy surfaces"
  code={`# Rolling upgrade baseline
path "sys/health" {
  capabilities = ["read"]
}

path "sys/step-down" {
  capabilities = ["sudo", "update"]
}

path "sys/storage/raft/autopilot/state" {
  capabilities = ["read"]
}

# Blue-green adds peer-management paths
path "sys/storage/raft/join" {
  capabilities = ["update"]
}

path "sys/storage/raft/configuration" {
  capabilities = ["read", "update"]
}

path "sys/storage/raft/remove-peer" {
  capabilities = ["update"]
}

path "sys/storage/raft/promote" {
  capabilities = ["update"]
}

path "sys/storage/raft/demote" {
  capabilities = ["update"]
}`}
>
  Rolling upgrades need less authority than blue-green cutovers. Keep those strategies separate in your head when you review the required policy surface.
</CommandBlock>

</TabItem>

</Tabs>

## Policy upgrade notes

<DecisionTable
  kind="reference"
  title="When the controller policy surface changes"
  columns={['Situation', 'What the operator does', 'What you must do']}
  rows={[
    {
      cells: [
        'A new operator release adds a controller-side capability',
        'Uses the new capability if the `openbao-operator` policy already includes it, otherwise reports `Unknown` or a permission error for the dependent feature.',
        'Update the `openbao-operator` policy manually on existing clusters. The operator does not rewrite OpenBao policies after bootstrap.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'A cluster was bootstrapped with self-init in an earlier release',
        'Keeps using the already-created JWT role and policy.',
        'Treat the policy as cluster security configuration that you own after bootstrap. Review release notes and add any newly required paths deliberately.',
      ],
    },
    {
      cells: [
        'JWT auth and policies are fully manually managed',
        'Never mutates that auth surface.',
        'Carry the full policy diff yourself as part of operator upgrades.',
      ],
    },
  ]}
/>

<DecisionTable
  kind="reference"
  title="Common authorization failures"
  columns={['Symptom', 'Likely boundary', 'Check first']}
  rows={[
    {
      cells: [
        'JWT login succeeds but the request returns `permission denied`',
        'The workload authenticated correctly but the policy is missing the needed path capability',
        'Which job or controller path is making the request, then the matching policy surface',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Backup works but restore fails',
        'The restore Job identity or restore policy is missing or misbound',
        'Restore ServiceAccount, restore role binding, and `snapshot-force` policy',
      ],
    },
    {
      cells: [
        'Rolling upgrade works but blue-green cutover stalls',
        'Peer-management permissions were not added for the upgrade strategy in use',
        'Upgrade strategy and the corresponding upgrade policy paths',
      ],
    },
    {
      cells: [
        'Controller can do too much',
        'A shortcut merged job-specific capabilities into the controller role',
        'Manual auth configuration drift from the intended separation model',
      ],
    },
  ]}
/>

<NextActions
  title="Go deeper"
  items={[
    {
      label: 'Operator authentication',
      description: 'Return to the JWT audience and bound-subject model when auth fails before policy even matters.',
      docId: 'user-guide/operator/authn',
    },
    {
      label: 'Backup operations',
      description: 'See how the backup Job uses its own auth and storage credentials during normal operation.',
      docId: 'user-guide/openbaocluster/operations/backups',
    },
    {
      label: 'Restore manager architecture',
      description: 'Review why restore stays isolated from the controller and how the operator drives it.',
      docId: 'architecture/restore-manager',
    },
  ]}
/>

## Official OpenBao background

- [Policy concepts](https://openbao.org/docs/concepts/policies/)
- [Policy command reference](https://openbao.org/docs/commands/policy/)
- [Token concepts](https://openbao.org/docs/concepts/tokens/)
